# ContinuaFabric

./: .gitignore  README.md  pyproject.toml  verification_report.json
continua_fabric/: __init__.py
continua_fabric/benchmarks/: __init__.py  continual_benchmarks.py
continua_fabric/core/: __init__.py  continual.py  elastic_weight.py  metrics.py  replay.py  synaptic_intelligence.py  visualization.py
continua_fabric/meta/: __init__.py  architecture_search.py  meta_pc.py
continua_fabric/nodes/: __init__.py  adapter.py  dropout.py  normalization.py  self_modulating.py
experiments/: continual_comparison.py  run_verification.py  split_mnist_demo.py
