[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continua_fabric"
version = "0.1.0"
description = "Continuous learning predictive coding networks on JAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NullLabTests" }]
keywords = ["predictive-coding", "continual-learning", "jax", "neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax",
    "jaxlib",
    "optax>=0.1.7",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["continua_fabric*"]
